--- a/MERN/Full Stack MERN/Team Manager/client/src/App.css
+++ b/MERN/Full Stack MERN/Team Manager/client/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+table{
+  margin-left: 350px;
+  margin-top: 30px;
+}
+td{
+  width: 200px;
+}
+.mn{
+  text-decoration: none;
+}
+button{
+  width: 200px;
+}
+*{
+  font-family: cursive;
+}
